fix(build): add src/index.html entry for Vite

--- a/src/index.html
+++ b/src/index.html
@@ -1,175 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
-
-<head>
-  <meta charset="UTF-8" />
-  <link rel="stylesheet" href="styles.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Video Matrix Pro V5.4 (Rust版)</title>
-  <script type="module" src="/main.js" defer></script>
-</head>
-
-<body>
-  <div class="app-container">
-    <!-- 左侧边栏: 控制与状态 -->
-    <aside class="sidebar">
-      <header class="app-header">
-        <h1>Video Matrix Pro</h1>
-        <p class="subtitle">Rust V5.4</p>
-      </header>
-
-      <!-- 工作空间 -->
-      <section class="panel workspace-panel">
-        <h3>📁 工作空间</h3>
-        <div class="input-group">
-          <label>输入目录</label>
-          <div class="input-with-btn">
-            <input type="text" id="input-dir" placeholder="选择文件夹..." readonly />
-            <button id="btn-browse-input" title="浏览">📂</button>
-          </div>
-        </div>
-        <div class="input-group">
-          <label>输出目录</label>
-          <div class="input-with-btn">
-            <input type="text" id="output-dir" placeholder="默认源目录/output" readonly />
-            <button id="btn-browse-output" title="保存至">💾</button>
-          </div>
-        </div>
-      </section>
-
-      <!-- 控制区 -->
-      <section class="panel control-panel">
-        <div class="progress-info">
-          <div class="progress-header">
-            <span id="etr-label">ETR: --:--:--</span>
-            <span id="progress-percent">0%</span>
-          </div>
-          <div class="progress-bar-container">
-            <div class="progress-bar" id="progress-bar"></div>
-          </div>
-        </div>
-        <div class="control-buttons">
-          <button id="btn-start" class="btn-primary">🚀 开始处理</button>
-          <button id="btn-stop" class="btn-danger">🛑 停止</button>
-        </div>
-      </section>
-
-      <!-- 日志区域 (固定在左下角) -->
-      <section class="panel log-panel">
-        <h3>📋 日志</h3>
-        <div id="log-area" class="log-area"></div>
-      </section>
-    </aside>
-
-    <!-- 右侧主内容: 功能选择 -->
-    <main class="main-content">
-      <div class="tabs-header">
-        <button class="tab-btn active" data-tab="all">全能去重面板</button>
-        <button class="tab-btn" data-tab="additional">后期增补功能</button>
-      </div>
-
-      <div class="tab-container">
-        <!-- Tab 1: 全能面板 -->
-        <div class="tab-content active" id="tab-all">
-          <div class="feature-section">
-            <h3 class="section-title">✂️ 基础剪辑</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="md5"> 一键MD5</label>
-              <label><input type="checkbox" value="crop"> 随机微裁切</label>
-              <label><input type="checkbox" value="cut_head_tail"> 去头去尾</label>
-              <label><input type="checkbox" value="rotate"> 微小旋转</label>
-              <label><input type="checkbox" value="speed"> 非线性变速</label>
-              <label><input type="checkbox" value="mirror"> 镜像翻转</label>
-              <label><input type="checkbox" value="fps_60"> 强制60帧</label>
-              <label><input type="checkbox" value="bitrate_hq"> 高码率</label>
-            </div>
-          </div>
-
-          <div class="feature-section">
-            <h3 class="section-title">🎨 画面增强</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="sharpen"> 智能锐化</label>
-              <label><input type="checkbox" value="portrait"> 人像锐化</label>
-              <label><input type="checkbox" value="denoise"> 智能降噪</label>
-              <label><input type="checkbox" value="clean"> 纯净降噪</label>
-              <label><input type="checkbox" value="grain"> 胶片颗粒</label>
-              <label><input type="checkbox" value="blur"> 智能柔光</label>
-              <label><input type="checkbox" value="color"> 色温偏移</label>
-              <label><input type="checkbox" value="vignette"> 电影暗角</label>
-              <label><input type="checkbox" value="bw"> 黑白滤镜</label>
-              <label><input type="checkbox" value="border"> 边框填充</label>
-              <label><input type="checkbox" value="pull"> 智能抽帧</label>
-              <label><input type="checkbox" value="corner"> 模糊遮罩</label>
-            </div>
-          </div>
-
-          <div class="feature-section">
-            <h3 class="section-title">🤖 AI & AB模式</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="zoom"> AI运镜</label>
-              <label><input type="checkbox" value="dissolve"> 移动溶图</label>
-              <label><input type="checkbox" value="scan"> 随机扫光</label>
-              <label><input type="checkbox" value="bounce"> 弹弹乐</label>
-              <label><input type="checkbox" value="trifold"> 三折叠</label>
-              <label><input type="checkbox" value="lava"> 熔岩模式</label>
-              <label><input type="checkbox" value="flash"> 3D闪屏</label>
-              <label><input type="checkbox" value="progressive"> 渐进处理</label>
-              <label><input type="checkbox" value="ab_blend"> AB混合</label>
-              <label><input type="checkbox" value="ab_glitch"> AB故障</label>
-              <label><input type="checkbox" value="ab_shake"> AB抖动</label>
-              <label><input type="checkbox" value="ab_chroma"> AB色偏</label>
-              <label><input type="checkbox" value="ab_replace"> AB替换</label>
-              <label><input type="checkbox" value="ab_advanced_replace"> 高级替换</label>
-            </div>
-          </div>
-
-          <div class="feature-section">
-            <h3 class="section-title">🎵 音频 & 其它</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="mute"> 静音</label>
-              <label><input type="checkbox" value="audio_noise"> 白噪音</label>
-              <label><input type="checkbox" value="pitch"> 变调</label>
-              <label><input type="checkbox" value="touch"> 修改时间戳</label>
-            </div>
-          </div>
-        </div>
-
-        <!-- Tab 2: 后期增补 -->
-        <div class="tab-content" id="tab-additional">
-          <div class="feature-section">
-            <h3 class="section-title">💪 强力去重</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="strong_crop"> 强力裁剪</label>
-              <label><input type="checkbox" value="watermark"> 水印</label>
-              <label><input type="checkbox" value="encode"> 修改编码</label>
-              <label><input type="checkbox" value="sticker"> 贴纸</label>
-              <label><input type="checkbox" value="mask"> 蒙版</label>
-              <label><input type="checkbox" value="ab_real_replace"> 真实替换</label>
-            </div>
-          </div>
-
-          <div class="feature-section">
-            <h3 class="section-title">👁️ OpenCV</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="face_detection"> 人脸检测</label>
-              <label><input type="checkbox" value="object_tracking"> 目标跟踪</label>
-              <label><input type="checkbox" value="opencv_filter"> CV滤镜</label>
-            </div>
-          </div>
-
-          <div class="feature-section">
-            <h3 class="section-title">✨ 素材增强</h3>
-            <div class="checkbox-grid">
-              <label><input type="checkbox" value="light_effect"> 光效</label>
-              <label><input type="checkbox" value="pip"> 画中画</label>
-              <label><input type="checkbox" value="edge_effect"> 边缘效果</label>
-              <label><input type="checkbox" value="goods_template"> 商品模板</label>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </div>
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>ideo-matrix-pro</title>
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.js"></script>
+  </body>
 </html>
