feat: Optimized mask scaling, added parallel processing with Rayon, and updated branding

--- a/src/index.html
+++ b/src/index.html
@@ -137,6 +137,18 @@
         <!-- Tab 2: 后期增补 -->
         <div class="tab-content" id="tab-additional">
           <div class="feature-section">
+            <h3 class="section-title">⚙️ 处理模式设置</h3>
+            <div class="single-video-toggle">
+              <label class="toggle-label">
+                <input type="checkbox" id="single-video-toggle">
+                <span class="toggle-slider"></span>
+                <span class="toggle-text">单个视频功能叠加模式</span>
+              </label>
+              <div class="toggle-description">开启后，所有选中的功能将按顺序应用到同一个视频，最终生成一个文件。关闭时，每个功能生成独立视频。</div>
+            </div>
+          </div>
+          
+          <div class="feature-section">
             <h3 class="section-title">💪 强力去重</h3>
             <div class="checkbox-grid">
               <label><input type="checkbox" value="strong_crop"> 强力裁剪</label>
